@@ -1,3 +1,6 @@
+* Aug 14 2014 Massimiliano Pala <madwolf@openca.org>
+- Fixed two bugs in PKI_RWLOCK_write_lock() that caoused deadlock if no RWLOCK support for pthread is available.
+
 * Aug  9 2014 Massimiliano Pala <madwolf@openca.org>
 - Optimized OCSP req and resp internal handling functions
 - Added PKI_X509_CERT_check_key() to verify that the same pubkey is in cert and key
